<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_login"
    tools:context=".activity.MainActivity">

    <View
        android:id="@+id/viewWhite"
        android:layout_width="410dp"
        android:layout_height="259dp"
        android:layout_marginEnd="2dp"
        android:background="@drawable/background_sup_login"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imgXDS"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@+id/viewWhite"
        app:layout_constraintEnd_toEndOf="@+id/viewWhite"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/viewWhite"
        app:srcCompat="@drawable/assinatura_com_lettering_1_1" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="410dp"
        android:layout_height="471dp"
        android:layout_marginBottom="1dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/viewWhite"
        app:layout_constraintVertical_bias="0.0">

        <TextView
            android:id="@+id/txtEntrar"
            android:layout_width="66dp"
            android:layout_height="28dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginTop="24dp"
            android:fontFamily="sans-serif"
            android:gravity="center_horizontal|top"
            android:text="@string/entrar"
            android:textAppearance="@style/entrar"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.098"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/edtUserLogin"
            android:layout_width="335dp"
            android:layout_height="50dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentRight="true"
            android:layout_marginTop="18dp"
            android:background="@drawable/background_txt_login"
            android:ems="10"
            android:gravity="top"
            android:hint="@string/loginUser"
            android:inputType="textPersonName"
            android:padding="14dp"
            android:textColor="#FFFFFF"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtEntrar" />

        <EditText
            android:id="@+id/edtUserSenha"
            android:layout_width="335dp"
            android:layout_height="50dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentRight="true"
            android:layout_marginTop="17dp"
            android:background="@drawable/background_txt_login"
            android:ems="10"
            android:gravity="top"
            android:hint="@string/senha"
            android:inputType="textPersonName"
            android:padding="14dp"
            android:textColor="#FFFFFF"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edtUserLogin" />

        <Button
            android:id="@+id/btnEntrar"
            android:layout_width="263dp"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginTop="60dp"
            android:background="@drawable/background_button_entrar"
            android:text="@string/entrar"
            android:textColor="#F7F7F7"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.503"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edtUserSenha"
            app:layout_constraintVertical_bias="0.0"
            tools:textAlignment="center" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="182dp"
            android:layout_marginEnd="170dp"
            android:layout_marginBottom="100dp"
            android:onClick="logar_pizza"
            android:text="@string/entrar"
            android:textAppearance="@style/entrar"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btnEntrar" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>